fix: lower menu z-index to show scan lines overlay

--- a/assets/scss/_menu.scss
+++ b/assets/scss/_menu.scss
@@ -1,5 +1,5 @@
 .menu {
-  z-index: 9999;
+  z-index: 99;
 
   @media #{$media-size-phone} {
     position: absolute;
